--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sart Of Project</title>
+    <title>Guess-My-Num</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" href="google.png" />
+    <link
+      rel="icon"
+      href="https://play-lh.googleusercontent.com/0HHA1IZEK7wBnfwejmgqCgs-FFuBa1EMG1fmSqgwOdFnCnsaalayU6bBRjwri7cHCMo"
+    />
   </head>
   <body>
     <h1>start of project</h1>
