added html tree to the first part/ header/wrap-button and more

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,14 @@
     />
   </head>
   <body>
-    <h1>start of project</h1>
+    <header class="header">
+      <div class="header-Wrap">
+        <div class="again-And-Text-Wrap">
+          <div class="again-Left-Wrap"></div>
+          <div class="again-Right-Wrap"></div>
+        </div>
+      </div>
+    </header>
     <script src="script.js"></script>
   </body>
 </html>
