--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,9 @@
           <div class="again-Left-Wrap">
             <button class="again-Btn">Again!</button>
           </div>
-          <div class="again-Right-Wrap"></div>
+          <div class="again-Right-Wrap">
+            <h3 class="again-Right-Text"><n><</n>Betweeen 1 and 20<n>></n></h3>
+          </div>
         </div>
       </div>
     </header>
