added title wrap + title text

--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,9 @@
             <h3 class="again-Right-Text"><n><</n>Betweeen 1 and 20<n>></n></h3>
           </div>
         </div>
+        <div class="Title-Wrap">
+          <h1 class="Title-Text">GUESS MY NUMBER!</h1>
+        </div>
       </div>
     </header>
     <script src="script.js"></script>
