added deco wrap/ html tree and more

--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,10 @@
           <h1 class="Title-Text">GUESS MY NUMBER!</h1>
         </div>
       </div>
+      <div class="decoration-Wrap">
+        <div class="decoration-Box">5</div>
+        <div class="decoration-Line"></div>
+      </div>
     </header>
     <script src="script.js"></script>
   </body>
