added score-Input-Wrap and added input wrap with all the html tree needed

--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,12 @@
         <div class="decoration-Box">5</div>
         <div class="decoration-Line"></div>
       </div>
+      <div class="score-Input-Wrap">
+        <div class="input-Wrap">
+          <input type="text" class="text-Input" />
+          <button class="check-Btn">CHECK!</button>
+        </div>
+      </div>
     </header>
     <script src="script.js"></script>
   </body>
