added score-Wrap  + title text score wrap with text

--- a/src/index.html
+++ b/src/index.html
@@ -41,6 +41,11 @@
           <input type="text" class="text-Input" />
           <button class="check-Btn">CHECK!</button>
         </div>
+        <div class="score-Wrap">
+          <div class="title-Text-Score-Wrap">
+            <h3 class="score-1-Text">Start gussing...</h3>
+          </div>
+        </div>
       </div>
     </header>
     <script src="script.js"></script>
