--- a/src/index.html
+++ b/src/index.html
@@ -46,6 +46,10 @@
             <h3 class="score-1-Text">Start gussing...</h3>
           </div>
         </div>
+        <div class="Score-Number-Wrap">
+          <h3 class="main-Score">score: 20</h3>
+          <h3 class="high-Score">highscore: 0</h3>
+        </div>
       </div>
     </header>
     <script src="script.js"></script>
