added some styling and text and coloring

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
       <div class="header-Wrap">
         <div class="again-And-Text-Wrap">
           <div class="again-Left-Wrap">
-            <button class="again-Btn">Again!</button>
+            <button class="again-Btn">Again<i>!</i></button>
           </div>
           <div class="again-Right-Wrap">
             <h3 class="again-Right-Text"><n><</n>Betweeen 1 and 20<n>></n></h3>
