small html change + styled the right side top text

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,10 @@
             <button class="again-Btn">Again<i>!</i></button>
           </div>
           <div class="again-Right-Wrap">
-            <h3 class="again-Right-Text"><n><</n>Betweeen 1 and 20<n>></n></h3>
+            <h3 class="again-Right-Text">
+              <i><n><</n></i
+              >Between 1 and 2<i><n>></n></i>
+            </h3>
           </div>
         </div>
         <div class="Title-Wrap">
