--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,9 @@
           <h1 class="Title-Text">GUESS MY NUMBER!</h1>
         </div>
         <div class="decoration-Wrap">
-          <div class="decoration-Box">5</div>
+          <div class="decoration-Box">
+            <h1 class="decoration-Text">5</h1>
+          </div>
           <div class="decoration-Line"></div>
         </div>
         <div class="score-Input-Wrap">
