added new input-Btn-Wrap div + added styling

--- a/src/index.html
+++ b/src/index.html
@@ -42,8 +42,10 @@
         </div>
         <div class="score-Input-Wrap">
           <div class="input-Wrap">
-            <input type="text" class="text-Input" />
-            <button class="check-Btn">CHECK!</button>
+            <div class="input-Btn-Wrap">
+              <input type="text" class="text-Input" />
+              <button class="check-Btn">CHECK!</button>
+            </div>
           </div>
           <div class="score-Wrap">
             <div class="title-Text-Score-Wrap">
