--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
         <div class="score-Input-Wrap">
           <div class="input-Wrap">
             <div class="input-Btn-Wrap">
-              <input type="text" class="text-Input" />
+              <input type="number" class="number-Input" min="1" max="20" />
               <button class="check-Btn">CHECK!</button>
             </div>
           </div>
