--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
           <div class="input-Wrap">
             <div class="input-Btn-Wrap">
               <input type="number" class="number-Input" min="1" max="20" />
-              <button class="check-Btn">CHECK!</button>
+              <button class="check-Btn">CHECK<i>!</i></button>
             </div>
           </div>
           <div class="score-Wrap">
