added a new html called score wrap wrapper

--- a/src/index.html
+++ b/src/index.html
@@ -48,12 +48,14 @@
             </div>
           </div>
           <div class="score-Wrap">
-            <div class="title-Text-Score-Wrap">
-              <h3 class="score-1-Text">Start gussing...</h3>
-            </div>
-            <div class="Score-Number-Wrap">
-              <h3 class="main-Score">score: 20</h3>
-              <h3 class="high-Score">highscore: 0</h3>
+            <div class="score-Wrap-Wrapper">
+              <div class="title-Text-Score-Wrap">
+                <h3 class="score-1-Text">Start gussing...</h3>
+              </div>
+              <div class="Score-Number-Wrap">
+                <h3 class="main-Score">score: 20</h3>
+                <h3 class="high-Score">highscore: 0</h3>
+              </div>
             </div>
           </div>
         </div>
