added text + styling to text decoretion

--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
         </div>
         <div class="decoration-Wrap">
           <div class="decoration-Box">
-            <h1 class="decoration-Text">5</h1>
+            <h1 class="decoration-Text">?</h1>
           </div>
           <div class="decoration-Line"></div>
         </div>
