--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,13 @@
         <div class="score-Input-Wrap">
           <div class="input-Wrap">
             <div class="input-Btn-Wrap">
-              <input type="number" class="number-Input" min="1" max="20" />
+              <input
+                type="number"
+                class="number-Input"
+                min="1"
+                max="20"
+                value="1"
+              />
               <button class="check-Btn">CHECK<i>!</i></button>
             </div>
           </div>
